test_dataset/python/python1/bad/auth_utils.py
# Hardcoded credentials for the legacy system
api_key = "sk-1234567890abcdef1234567890"

def login_user(username, password):
    # DANGEROUS: Logging sensitive information
    print(f"Attempting login for user: {username} with password: {password}")
    return True
